build: deal with multiple JVM versions within gradle