@@ -1,5 +1,7 @@
 plugins {
     alias(libs.plugins.kotlin.jvm)
+    alias(libs.plugins.multiJvmTesting)
+    alias(libs.plugins.taskTree)
 }
 
 repositories { mavenCentral() }
@@ -11,6 +13,10 @@ sourceSets {
             srcDir("src/main/yaml")
         }
     }
+}
+
+multiJvm {
+    jvmVersionForCompilation.set(11)
 }
 
 fun onJava16AndAbove(body: () -> Unit) {
@@ -29,7 +35,6 @@ dependencies {
     }
 }
 
-
 val batch: String by project
 val maxTime: String by project
 
@@ -46,38 +51,40 @@ val runAll by tasks.register<DefaultTask>("runAll") {
  * Scan the folder with the simulation files, and create a task for each one of them.
  */
 File(rootProject.rootDir.path + "/src/main/yaml").listFiles()
-        .filter { it.extension == "yml" }
-        .sortedBy { it.nameWithoutExtension }
-        .forEach {
-            val task by tasks.register<JavaExec>("run${it.nameWithoutExtension.capitalize()}") {
-                group = alchemistGroup
-                description = "Launches simulation ${it.nameWithoutExtension}"
-                onJava16AndAbove {
-                    jvmArgs("--illegal-access=permit")
+    .filter { it.extension == "yml" }
+    .sortedBy { it.nameWithoutExtension }
+    .forEach {
+        val task by tasks.register<JavaExec>("run${it.nameWithoutExtension.capitalize()}") {
+            javaLauncher.set(
+                javaToolchains.launcherFor {
+                    languageVersion.set(JavaLanguageVersion.of(multiJvm.latestJava))
                 }
-                main = "it.unibo.alchemist.Alchemist"
-                classpath = sourceSets["main"].runtimeClasspath
-                val exportsDir = File("${projectDir.path}/build/exports/${it.nameWithoutExtension}")
-                doFirst {
-                    if (!exportsDir.exists()) {
-                        exportsDir.mkdirs()
-                    }
+            )
+            group = alchemistGroup
+            description = "Launches simulation ${it.nameWithoutExtension}"
+            mainClass.set("it.unibo.alchemist.Alchemist")
+            classpath = sourceSets["main"].runtimeClasspath
+            val exportsDir = File("${projectDir.path}/build/exports/${it.nameWithoutExtension}")
+            doFirst {
+                if (!exportsDir.exists()) {
+                    exportsDir.mkdirs()
                 }
-                args("-y", it.absolutePath, "-e", "$exportsDir/${it.nameWithoutExtension}-${System.currentTimeMillis()}")
-                if (System.getenv("CI") == "true" || batch == "true") {
-                    args("-hl", "-t", maxTime)
-                } else {
-                    args("-g", "effects/${it.nameWithoutExtension}.json")
-                }
-                outputs.dir(exportsDir)
             }
-            // task.dependsOn(classpathJar) // Uncomment to switch to jar-based cp resolution
-            runAll.dependsOn(task)
+            args("-y", it.absolutePath, "-e", "$exportsDir/${it.nameWithoutExtension}-${System.currentTimeMillis()}")
+            if (System.getenv("CI") == "true" || batch == "true") {
+                args("-hl", "-t", maxTime)
+            } else {
+                args("-g", "effects/${it.nameWithoutExtension}.json")
+            }
+            outputs.dir(exportsDir)
         }
+        runAll.dependsOn(task)
+    }
 
-tasks.test {
+tasks.withType<Test> {
     useJUnitPlatform()
     testLogging {
+        events("passed", "skipped", "failed", "standardError")
         exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
     }
 }
